test/expressions/noinit/lateNoinit.good
lateNoinit.chpl:3: error: Cannot assign to int(64) from void
