test/expressions/noinit/lateNoinit.chpl
var a: int(64) = 0;
// a has already been initialized, if you try to noinit it now, you're S.O.L.
a = noinit;
